[package]
name = "quickey"
version = "0.1.0"
author = ["Galen Guyer <galen@galenguyer.com>"]
description = "Quick password and API key generation"
license = "MIT"
edition = "2021"

[features]
default = ["base58"]
base58 = ["dep:bs58"]

[dependencies]
bs58 = { version = "0.4.0", optional = true }
rand = "0.8.5"
