[package]
name = "quickey"
version = "0.2.0"
authors = ["Galen Guyer <galen@galenguyer.com>"]
description = "Quick password and API key generation"
license = "MIT"
edition = "2021"

[features]
default = ["base58"]
base58 = ["dep:bs58"]

[dependencies]
bs58 = { version = "0.4.0", optional = true }
clap = { version = "4.2.5", features = ["cargo", "derive"] }
rand = "0.8.5"
