[package]
name = "quickey"
version = "0.4.0"
authors = ["Galen Guyer <galen@galenguyer.com>"]
description = "Quick password and API key generation"
license = "MIT"
edition = "2021"

[features]
default = ["base58", "base64", "hex"]
base58 = ["dep:bs58"]
hex = ["dep:hex"]
base64 = ["dep:base64"]

[dependencies]
base64 = { version = "0.21.0", optional = true }
bs58 = { version = "0.4.0", optional = true }
clap = { version = "4.2.5", features = ["cargo", "derive"] }
hex = { version = "0.4.3", optional = true }
rand = "0.8.5"
